--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>joda-beans</artifactId>
             <version>1.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
