--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,16 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.0.5</kotlin.version>
+        <kotlin.version>1.1.60</kotlin.version>
         <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.fork>true</maven.compiler.fork>
         <maven.compiler.verbose>true</maven.compiler.verbose>
+        <guava.version>23.0</guava.version>
+        <assertj.version>3.8.0</assertj.version>
+        <testng.version>6.11</testng.version>
+        <joda-beans.version>2.0.2</joda-beans.version>
     </properties>
 
     <dependencies>
@@ -34,26 +38,26 @@
         <dependency>
             <groupId>org.joda</groupId>
             <artifactId>joda-beans</artifactId>
-            <version>1.9</version>
+            <version>${joda-beans.version}</version>
         </dependency>
 
         <!-- test dependencies -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.9.10</version>
+            <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.5.2</version>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>19.0</version>
+            <version>${guava.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
