--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.cjkent</groupId>
+    <groupId>io.github.cjkent.kotlinbeans</groupId>
     <artifactId>kotlin-beans</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>jar</packaging>
 
-    <name>io.github.cjkent kotlin-beans</name>
+    <name>Kotlin Beans</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
