--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <testng.version>6.11</testng.version>
         <joda-beans.version>2.8.0</joda-beans.version>
         <joda-convert.version>2.2.1</joda-convert.version>
+        <dokka.version>0.9.18</dokka.version>
     </properties>
 
     <dependencies>
@@ -133,5 +134,123 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.jetbrains.dokka</groupId>
+                        <artifactId>dokka-maven-plugin</artifactId>
+                        <version>${dokka.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>javadocJar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <skip>false</skip>
+                            <outputFormat>html</outputFormat>
+                            <!-- List of '.md' files with package and module docs -->
+                            <!-- http://kotlinlang.org/docs/reference/kotlin-doc.html#module-and-package-documentation -->
+                            <!--
+                                                <includes>
+                                                    <file>packages.md</file>
+                                                    <file>extra.md</file>
+                                                </includes>
+                            -->
+                            <!-- Used for linking to JDK, default: 6 -->
+                            <jdkVersion>8</jdkVersion>
+                            <reportNotDocumented>true</reportNotDocumented>
+                            <!-- See platforms section of documentation -->
+                            <impliedPlatforms>
+                                <platform>JVM</platform>
+                            </impliedPlatforms>
+
+                            <!-- Full form list of sourceRoots -->
+                            <sourceRoots>
+                                <root>
+                                    <path>core/src/main/kotlin</path>
+                                    <!-- See platforms section of documentation -->
+                                    <platforms>JVM</platforms>
+                                </root>
+                            </sourceRoots>
+
+                            <!-- Specifies the location of the project source code on the Web. If provided, Dokka generates "source" links
+                                 for each declaration. -->
+                            <sourceLinks>
+                                <link>
+                                    <!-- Source directory -->
+                                    <dir>${project.basedir}/core/src/main/kotlin</dir>
+                                    <!-- URL showing where the source code can be accessed through the web browser -->
+                                    <url>https://github.com/cjkent/kotlin-beans/tree/master</url>
+                                    <!--Suffix which is used to append the line number to the URL. Use #L for GitHub -->
+                                    <urlSuffix>#L</urlSuffix>
+                                </link>
+                            </sourceLinks>
+
+                            <!-- No default documentation link to kotlin-stdlib -->
+                            <noStdlibLink>false</noStdlibLink>
+
+                            <!-- Allows linking to documentation of the project's dependencies (generated with Javadoc or Dokka) -->
+                            <!--
+                                                <externalDocumentationLinks>
+                                                    <link>
+                                                        &lt;!&ndash; Root URL of the generated documentation to link with. The trailing slash is required! &ndash;&gt;
+                                                        <url>https://example.com/docs/</url>
+                                                        &lt;!&ndash; If package-list file located in non-standard location &ndash;&gt;
+                                                        &lt;!&ndash; <packageListUrl>file:///home/user/localdocs/package-list</packageListUrl> &ndash;&gt;
+                                                    </link>
+                                                </externalDocumentationLinks>
+                            -->
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.8</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 
 </project>
